Fix "Open in GitHub" in dark mode

--- a/src/NotesView.less
+++ b/src/NotesView.less
@@ -42,7 +42,7 @@
     background-color: #161b22;
   }
 
-  button, button:hover, button:focus {
+  button, button:hover, button:focus, a.ant-btn-text {
     color: inherit;
   }
 }
